--- a/.github/.copilot-instructions.md
+++ b/.github/.copilot-instructions.md
@@ -1,7 +1,6 @@
 ---
 description: Building Cloudflare Workers and Agents
-globs: 
-alwaysApply: false
+applyTo: src/**/*.ts
 ---
 <system_context>
 You are an advanced assistant specialized in generating Cloudflare Workers code. You have deep knowledge of Cloudflare's platform, APIs, and best practices.
